data/derived/comb/progs/unify/prog4078.ml.out
Characters 98-110:
  else bigAdd (mulByDigit (i-2) l) (mulByDigit i-2 l);;
                                    ^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
